--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Link to Swiper's CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <header>
@@ -16,19 +14,12 @@
         </nav>
     </header>
     <main>
-        <div class="swiper-container">
-            <div class="swiper-wrapper" id="swiper-wrapper">
-                <!-- Slides will be inserted here -->
+        <div id="slideshow-container">
+            <div class="slideshow">
+                <img src="" alt="Photo" id="slide-image">
             </div>
-            <!-- Add Pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Add Navigation -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
         </div>
     </main>
-    <!-- Link to Swiper's JavaScript -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
