--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="greeting-container" class="greeting-container">
+        <h1>Happy Anniversary Chinnoda, Love You So Much!</h1>
+        <div class="hearts">
+            <div class="heart"></div>
+            <div class="heart"></div>
+            <div class="heart"></div>
+        </div>
+    </div>
     <header>
         <h1>Photo Gallery</h1>
         <nav>
